# flowmailer

./: .gitignore  Cargo.toml
examples/: example.rs
src/: auth.rs  client.rs  error.rs  lib.rs  mail.rs  request.rs  resources.rs  rest_api.rs  template.rs  ty.rs
